# ai-try

./: README.md
kitten-demo/: .gitignore  README.md  demo.py  pyproject.toml
kitten-demo/model/: README.md
