[project]
name = "kitten-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "espeakng-loader>=0.2.4",
    "misaki[en]>=0.9.4",
    "num2words>=0.5.14",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
]
